<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- "Done", should appear as action button if possible. Icon will ve a check mark. -->
    <item android:id="@+id/action_done_editing"
            android:icon="@drawable/ic_add"
            android:title="@string/done"
            app:showAsAction="ifRoom" />

    <!-- Settings, should always be in the overflow -->
    <item android:id="@+id/action_abandon_quest"
            android:title="@string/abandon"
            app:showAsAction="never" />

    <item android:id="@+id/action_add_due_date"
            android:title="@string/add_due_date"
            app:showAsAction="never" />

    <item android:id="@+id/action_remove_due_date"
            android:title="@string/remove_due_date"
            app:showAsAction="never" />
</menu>