<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        >
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" >

        <!-- =============== TOGGLE ================== -->
        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/toggle_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

            <TextView
                    android:id="@+id/set_at_time_due_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:paddingEnd="8dp"
                    android:text="@string/at_time_due"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="@+id/set_at_time_due_switch"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="@+id/set_at_time_due_switch"
                    tools:ignore="RtlSymmetry" />

            <Switch
                    android:id="@+id/set_at_time_due_switch"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text=""
                    app:layout_constraintStart_toEndOf="@id/set_at_time_due_text"
                    app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- =============== SPINNERS ================== -->
    <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/spinner_group"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="12dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toggle_group">

            <Spinner
                    android:id="@+id/increment_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            <Spinner
                    android:id="@+id/interval_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/increment_spinner"
                    app:layout_constraintTop_toTopOf="parent"/>

            <TextView
                    android:id="@+id/before_text_view"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/before"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/interval_spinner"
                    app:layout_constraintTop_toTopOf="parent"/>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <!-- =============== CUSTOM TIME ================== -->
        <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/custom_time_group"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="12dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/spinner_group">
            <TextView
                    android:id="@+id/custom_time_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text="@string/set_custom_time"
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            <ImageView
                    android:id="@+id/custom_time_indicator"
                    android:paddingStart="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintStart_toEndOf="@id/custom_time_text"
                    app:layout_constraintTop_toTopOf="@id/custom_time_text"
                    app:layout_constraintBottom_toBottomOf="@id/custom_time_text"
                    app:srcCompat="@drawable/ic_spinner_indicator"
                    tools:ignore="RtlSymmetry" />
            <TextView
                    android:id="@+id/custom_time"
                    android:paddingStart="6dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto"
                    android:text=""
                    android:textColor="@android:color/black"
                    android:textSize="16sp"
                    app:layout_constraintStart_toEndOf="@id/custom_time_indicator"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:ignore="RtlSymmetry" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>